--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/tailwind": "^5.1.1",
 		"astro": "^4.15.9",
 		"lodash": "^4.17.21",
+		"lucide-astro": "^0.484.0",
 		"tailwindcss": "^3.4.13",
 		"typescript": "^5.6.2"
 	},
